--- a/package.json
+++ b/package.json
@@ -124,7 +124,6 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@planeshifter/brace": "^0.9.0",
     "@stdlib/stdlib": "0.0.43",
     "archiver": "^3.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -133,6 +132,7 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
+    "brace": "^0.11.1",
     "codemirror": "^5.39.2",
     "component-playground": "^3.1.2",
     "compute-chunkify": "0.0.0",
