--- a/package.json
+++ b/package.json
@@ -135,6 +135,8 @@
     "brace": "^0.11.1",
     "codemirror": "^5.39.2",
     "component-playground": "^3.1.2",
+    "component-raf": "^1.2.0",
+    "component-tween": "^1.2.0",
     "compute-chunkify": "0.0.0",
     "compute-mean": "^3.0.0",
     "compute-stdev": "^1.0.0",
