--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "pdfmake-lite": "^0.1.36",
     "plotly.js": "^1.38.1",
     "pressure": "^2.1.2",
+    "prismjs": "^1.6.0",
     "profanities": "^2.5.0",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
