--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,8 @@
   "plugins": [
     "@babel/plugin-transform-react-jsx",
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-syntax-dynamic-import"
+    "@babel/plugin-syntax-dynamic-import",
+    "transform-modern-regexp"
   ],
   "env": {
     "development": {
