--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-modern-regexp": "0.0.6",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
     "brace": "^0.11.1",
