--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@stdlib/stdlib": "0.0.43",
+    "ansi-to-react": "^3.3.3",
     "archiver": "^3.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
