--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
     "@babel/plugin-transform-react-jsx",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import",
-    "transform-modern-regexp"
+    "transform-modern-regexp",
+    "react-hot-loader/babel"
   ],
   "env": {
     "development": {
