--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@stdlib/stdlib": "0.0.43",
+    "@stdlib/stdlib": "0.0.44",
     "ansi-to-react": "^3.3.3",
     "archiver": "^3.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -208,6 +208,7 @@
     "react-highlight-words": "^0.14.0",
     "react-input-range": "^1.2.1",
     "react-joyride": "^2.0.0-11",
+    "react-json-tree": "^0.11.0",
     "react-list": "^0.8.8",
     "react-notification-system": "^0.2.7",
     "react-player": "^1.6.4",
