--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
   "plugins": [
     "@babel/plugin-transform-react-jsx",
     "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-syntax-dynamic-import",
     "transform-modern-regexp",
     "react-hot-loader/babel"
