--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@stdlib/stdlib": "0.0.50",
     "ansi-to-react": "^3.3.3",
     "archiver": "^3.0.0",
+    "autobind-decorator": "^2.2.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "8.0.4",
